Better control of cromwell server demands